# SG-VILLA-DOLCE

./: README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app/: dependencies.py  main.py  setup.py
app/database/: crud.py  dbmain.py  initial_data.py  models.py
app/database/crud/: caixa.py  cargo.py  categoria.py  cliente.py  dashboard.py  estoque.py  pagamento.py  pedido.py  produto.py  produto_pedido.py  tipo_pagamento.py  usuario.py
app/routers/v1/: caixa.py  cargo.py  categoria.py  cliente.py  dashboard.py  estoque.py  pedido.py  produto.py  test.py  tipo_pagamento.py  usuario.py
frontend/: index.html  main.js
frontend/cadastrar-cliente/: cadastrar-cliente.html
frontend/cadastrar-cliente/assets/css/: style.css
frontend/caixa-abrir/: caixa-abrir.html
frontend/cliente-info/: cliente-info.html
frontend/cliente-lista/: cliente-lista.html
frontend/dashboard/: dashboard.html
frontend/electron-app/: main.js  package-lock.json  package.json  preload.js
frontend/electron-app/cliente-lista/: cliente-lista.html
frontend/electron-app/dashboard/: dashboard.html
frontend/electron-app/login/: login.html
frontend/electron-vite-app/: package-lock.json  package.json
frontend/electron-vite-vuetify-app/: electron-builder.yml  package-lock.json  package.json
frontend/electron-vue-app/: package-lock.json
frontend/login/: login.html
frontend/login/assets/css/: style.css
frontend/pedido/: pedido.html
frontend/vue-vite-app/: index.html  package-lock.json  package.json
frontend/vue-vite-app/src/: main.js  router.js  store.js
(+88 files in other folders)
