[tool.poetry]
name = "app"
version = "0.1.0"
description = "Villa Dolce App"
authors = ["EuricoDNJR <massaultyplay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
peewee = "^3.17.0"
passlib = "^1.7.4"
pydantic = "^2.5.3"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
